# code_test_1

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROMPT.md  README.md  TODO.md  run-ralph.sh
.claude/: settings.json  settings.local.json
.claude/commands/: ralph.md
.github/workflows/: ci.yml
include/: calculator.h
scripts/: coverage.sh
src/: main.cpp
tests/: calculator_test.cpp
